// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Forms/FormFieldRules All Fulfilled 1`] = `
<div>
  <div
    className="mb-2"
  >
    <label
      className="undefined block mb-2 cursor-pointer transition"
      htmlFor="username"
    >
      <span>
        Username
      </span>
       
    </label>
    <input
      className=" mb-2"
      id="username"
      name="username"
      placeholder="Enter your username"
      type="text"
      value="perfect username"
    />
  </div>
  <ul
    className="flex flex-col"
  >
    <li
      className="flex gap-1 items-center leading-tight text-sm"
    >
      <svg
        className="text-green"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.088 1.691a1 1 0 0 1 .288 1.291l-.067.106-8 11-.009.012a.4.4 0 0 1-.032.04l.04-.052a1.009 1.009 0 0 1-.089.107l-.012.012-.03.029a.993.993 0 0 1-.054.047l.084-.076a1.007 1.007 0 0 1-.74.293 1.066 1.066 0 0 1-.303-.058.955.955 0 0 1-.252-.133L4.9 14.3a.999.999 0 0 1-.013-.01l-.037-.032-.035-.03a1 1 0 0 1-.01-.009l-.012-.012-3-3a1 1 0 0 1 1.32-1.497l.094.083 2.172 2.17 7.312-10.051a1 1 0 0 1 1.397-.22Z"
          fill="currentColor"
        />
      </svg>
       
      <span
        className="pt-1"
      >
        Unique
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm"
    >
      <svg
        className="text-green"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.088 1.691a1 1 0 0 1 .288 1.291l-.067.106-8 11-.009.012a.4.4 0 0 1-.032.04l.04-.052a1.009 1.009 0 0 1-.089.107l-.012.012-.03.029a.993.993 0 0 1-.054.047l.084-.076a1.007 1.007 0 0 1-.74.293 1.066 1.066 0 0 1-.303-.058.955.955 0 0 1-.252-.133L4.9 14.3a.999.999 0 0 1-.013-.01l-.037-.032-.035-.03a1 1 0 0 1-.01-.009l-.012-.012-3-3a1 1 0 0 1 1.32-1.497l.094.083 2.172 2.17 7.312-10.051a1 1 0 0 1 1.397-.22Z"
          fill="currentColor"
        />
      </svg>
       
      <span
        className="pt-1"
      >
        Only letters, digits, _ and/or -
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm"
    >
      <svg
        className="text-green"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.088 1.691a1 1 0 0 1 .288 1.291l-.067.106-8 11-.009.012a.4.4 0 0 1-.032.04l.04-.052a1.009 1.009 0 0 1-.089.107l-.012.012-.03.029a.993.993 0 0 1-.054.047l.084-.076a1.007 1.007 0 0 1-.74.293 1.066 1.066 0 0 1-.303-.058.955.955 0 0 1-.252-.133L4.9 14.3a.999.999 0 0 1-.013-.01l-.037-.032-.035-.03a1 1 0 0 1-.01-.009l-.012-.012-3-3a1 1 0 0 1 1.32-1.497l.094.083 2.172 2.17 7.312-10.051a1 1 0 0 1 1.397-.22Z"
          fill="currentColor"
        />
      </svg>
       
      <span
        className="pt-1"
      >
        No long than 20 characters
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Forms/FormFieldRules Some Fulfilled 1`] = `
<div>
  <div
    className="mb-2"
  >
    <label
      className="undefined block mb-2 cursor-pointer transition"
      htmlFor="username"
    >
      <span>
        Username
      </span>
       
    </label>
    <input
      className=" mb-2"
      id="username"
      name="username"
      placeholder="Enter your username"
      type="text"
      value="$%^&"
    />
  </div>
  <ul
    className="flex flex-col"
  >
    <li
      className="flex gap-1 items-center leading-tight text-sm"
    >
      <svg
        className="text-green"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.088 1.691a1 1 0 0 1 .288 1.291l-.067.106-8 11-.009.012a.4.4 0 0 1-.032.04l.04-.052a1.009 1.009 0 0 1-.089.107l-.012.012-.03.029a.993.993 0 0 1-.054.047l.084-.076a1.007 1.007 0 0 1-.74.293 1.066 1.066 0 0 1-.303-.058.955.955 0 0 1-.252-.133L4.9 14.3a.999.999 0 0 1-.013-.01l-.037-.032-.035-.03a1 1 0 0 1-.01-.009l-.012-.012-3-3a1 1 0 0 1 1.32-1.497l.094.083 2.172 2.17 7.312-10.051a1 1 0 0 1 1.397-.22Z"
          fill="currentColor"
        />
      </svg>
       
      <span
        className="pt-1"
      >
        Unique
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm text-gray-500"
    >
      <svg
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.387 3.21a1 1 0 0 1 1.226 0l.094.083L8 6.585l3.293-3.292.094-.083a1 1 0 0 1 1.403 1.403l-.083.094L9.415 8l3.292 3.293a1 1 0 0 1-1.32 1.497l-.094-.083L8 9.415l-3.293 3.292a1 1 0 0 1-1.32.083l-.094-.083a1 1 0 0 1-.083-1.32l.083-.094L6.585 8 3.293 4.707l-.083-.094a1 1 0 0 1 0-1.226l.083-.094.094-.083Z"
          fill="currentColor"
        />
      </svg>
       
      <span
        className="pt-1"
      >
        Only letters, digits, _ and/or -
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm"
    >
      <svg
        className="text-green"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.088 1.691a1 1 0 0 1 .288 1.291l-.067.106-8 11-.009.012a.4.4 0 0 1-.032.04l.04-.052a1.009 1.009 0 0 1-.089.107l-.012.012-.03.029a.993.993 0 0 1-.054.047l.084-.076a1.007 1.007 0 0 1-.74.293 1.066 1.066 0 0 1-.303-.058.955.955 0 0 1-.252-.133L4.9 14.3a.999.999 0 0 1-.013-.01l-.037-.032-.035-.03a1 1 0 0 1-.01-.009l-.012-.012-3-3a1 1 0 0 1 1.32-1.497l.094.083 2.172 2.17 7.312-10.051a1 1 0 0 1 1.397-.22Z"
          fill="currentColor"
        />
      </svg>
       
      <span
        className="pt-1"
      >
        No long than 20 characters
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Forms/FormFieldRules Some Loading 1`] = `
<div>
  <div
    className="mb-2"
  >
    <label
      className="undefined block mb-2 cursor-pointer transition"
      htmlFor="username"
    >
      <span>
        Username
      </span>
       
    </label>
    <input
      className=" mb-2"
      id="username"
      name="username"
      placeholder="Enter your username"
      type="text"
      value="$%^&"
    />
  </div>
  <ul
    className="flex flex-col"
  >
    <li
      className="flex gap-1 items-center leading-tight text-sm"
    >
      <svg
        className="text-green"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.088 1.691a1 1 0 0 1 .288 1.291l-.067.106-8 11-.009.012a.4.4 0 0 1-.032.04l.04-.052a1.009 1.009 0 0 1-.089.107l-.012.012-.03.029a.993.993 0 0 1-.054.047l.084-.076a1.007 1.007 0 0 1-.74.293 1.066 1.066 0 0 1-.303-.058.955.955 0 0 1-.252-.133L4.9 14.3a.999.999 0 0 1-.013-.01l-.037-.032-.035-.03a1 1 0 0 1-.01-.009l-.012-.012-3-3a1 1 0 0 1 1.32-1.497l.094.083 2.172 2.17 7.312-10.051a1 1 0 0 1 1.397-.22Z"
          fill="currentColor"
        />
      </svg>
       
      <span
        className="pt-1"
      >
        Unique
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm text-gray-500"
    >
      <svg
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.387 3.21a1 1 0 0 1 1.226 0l.094.083L8 6.585l3.293-3.292.094-.083a1 1 0 0 1 1.403 1.403l-.083.094L9.415 8l3.292 3.293a1 1 0 0 1-1.32 1.497l-.094-.083L8 9.415l-3.293 3.292a1 1 0 0 1-1.32.083l-.094-.083a1 1 0 0 1-.083-1.32l.083-.094L6.585 8 3.293 4.707l-.083-.094a1 1 0 0 1 0-1.226l.083-.094.094-.083Z"
          fill="currentColor"
        />
      </svg>
       
      <span
        className="pt-1"
      >
        Only letters, digits, _ and/or -
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm text-gray-500"
    >
      <svg
        className="animate-spin"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 .013a8.001 8.001 0 0 1 7.927 6.915 1 1 0 0 1-1.982.269A6.001 6.001 0 0 0 8 2.013c-3.314 0-6.45 2.726-6.45 6.04 0 3.963 3.136 7.431 6.45 7.431C4.616 15.484.317 12.316.317 8 .317 3.683 3.581.013 8 .013Z"
          fill="currentColor"
        />
      </svg>
       
      <span
        className="pt-1"
      >
        No long than 20 characters
      </span>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Forms/FormFieldRules Untouched 1`] = `
<div>
  <div
    className="mb-2"
  >
    <label
      className="undefined block mb-2 cursor-pointer transition"
      htmlFor="username"
    >
      <span>
        Username
      </span>
       
    </label>
    <input
      className=" mb-2"
      id="username"
      name="username"
      placeholder="Enter your username"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Storyshots Forms/FormFieldRules With Errors 1`] = `
<div>
  <div
    className="mb-2"
  >
    <label
      className="undefined block mb-2 cursor-pointer transition"
      htmlFor="username"
    >
      <span>
        Username
      </span>
       
    </label>
    <input
      className="error mb-2"
      id="username"
      name="username"
      placeholder="Enter your username"
      type="text"
      value="πø∆ø∑∆ˆ“ˆ“∆∆∆wefwef"
    />
    <p
      className="text-error text-sm"
    >
      The username is too long
    </p>
    <p
      className="text-error text-sm"
    >
      The username can only include lettersm digits, _ and/or -
    </p>
  </div>
  <ul
    className="flex flex-col"
  >
    <li
      className="flex gap-1 items-center leading-tight text-sm"
    >
      <svg
        className="text-green"
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M14.088 1.691a1 1 0 0 1 .288 1.291l-.067.106-8 11-.009.012a.4.4 0 0 1-.032.04l.04-.052a1.009 1.009 0 0 1-.089.107l-.012.012-.03.029a.993.993 0 0 1-.054.047l.084-.076a1.007 1.007 0 0 1-.74.293 1.066 1.066 0 0 1-.303-.058.955.955 0 0 1-.252-.133L4.9 14.3a.999.999 0 0 1-.013-.01l-.037-.032-.035-.03a1 1 0 0 1-.01-.009l-.012-.012-3-3a1 1 0 0 1 1.32-1.497l.094.083 2.172 2.17 7.312-10.051a1 1 0 0 1 1.397-.22Z"
          fill="currentColor"
        />
      </svg>
       
      <span
        className="pt-1"
      >
        Unique
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm text-gray-500"
    >
      <svg
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.387 3.21a1 1 0 0 1 1.226 0l.094.083L8 6.585l3.293-3.292.094-.083a1 1 0 0 1 1.403 1.403l-.083.094L9.415 8l3.292 3.293a1 1 0 0 1-1.32 1.497l-.094-.083L8 9.415l-3.293 3.292a1 1 0 0 1-1.32.083l-.094-.083a1 1 0 0 1-.083-1.32l.083-.094L6.585 8 3.293 4.707l-.083-.094a1 1 0 0 1 0-1.226l.083-.094.094-.083Z"
          fill="currentColor"
        />
      </svg>
       
      <span
        className="pt-1"
      >
        Only letters, digits, _ and/or -
      </span>
    </li>
    <li
      className="flex gap-1 items-center leading-tight text-sm text-gray-500"
    >
      <svg
        height="16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.387 3.21a1 1 0 0 1 1.226 0l.094.083L8 6.585l3.293-3.292.094-.083a1 1 0 0 1 1.403 1.403l-.083.094L9.415 8l3.292 3.293a1 1 0 0 1-1.32 1.497l-.094-.083L8 9.415l-3.293 3.292a1 1 0 0 1-1.32.083l-.094-.083a1 1 0 0 1-.083-1.32l.083-.094L6.585 8 3.293 4.707l-.083-.094a1 1 0 0 1 0-1.226l.083-.094.094-.083Z"
          fill="currentColor"
        />
      </svg>
       
      <span
        className="pt-1"
      >
        No long than 20 characters
      </span>
    </li>
  </ul>
</div>
`;
